--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="https://html.themewant.com/moonlit/assets/images/logo/logo.svg" />
     <link rel="stylesheet" href="/path-to-your-icon-font/flaticon.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>moonlit</title>
+    <title>Waghera Agro Tourism</title>
   </head>
   <body>
     <div id="root"></div>
